--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "shortid": "^2.2.16",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animated": "^1.1.2"
+    "tailwindcss-animated": "^1.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
