Env file Updated

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-RAZORPAY_API_KEY = rzp_test_lzZrYAAsmWZ5MJ
-RAZORPAY_API_SECRET = X0QydUiEUn70nHNgMiwaQwsR
-NEXT_PUBLIC_BASE_URL = http://localhost:3000
+RAZORPAY_API_KEY = rzp_test_Cl7u3umPOApZLL
+RAZORPAY_API_SECRET = 4GOPZuog79lgwHJUFzhtbmUd
+NEXT_PUBLIC_BASE_URL = https://footloosemonkey.netlify.app/
 MONGODB_URI = mongodb+srv://anujbefog:anujbefog@footloosemonkey.gmeap.mongodb.net/Footloosemonkey?retryWrites=true&w=majority&appName=Footloosemonkey
