--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "framer-motion": "^11.3.31",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.6.3",
     "next": "14.2.5",
