--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.0",
     "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.6.3",
     "next": "14.2.5",
