--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -38,6 +39,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.8.1",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
