--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "filesize": "^10.1.6",
     "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.408.0",
     "mongoose": "^8.6.3",
     "next": "14.2.5",
+    "next-cloudinary": "^6.16.0",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "react-typing-effect": "^2.0.5",
     "shortid": "^2.2.16",
