--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/components/spotlight/SpotlightCard/index.js", "src/app/spotlight/page.js", "src/services/submissionService.js", "src/lib/submissionPrisma.js"  ],
+, "src/components/spotlight/SpotlightCard/index.tsx", "src/app/spotlight/page.js", "src/services/submissionService.js", "src/lib/submissionPrisma.js"  ],
   "exclude": [
     "node_modules"
   ]
