--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/node": "22.8.1",
     "@types/react": "18.3.12",
+    "@types/react-typing-effect": "^2.0.7",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
