--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "22.8.1",
     "@types/react": "18.3.12",
     "@types/react-typing-effect": "^2.0.7",
