--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.6.3",
     "next": "14.2.5",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
     "react": "^18",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "22.8.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "18.3.12",
     "@types/react-typing-effect": "^2.0.7",
     "@types/uuid": "^10.0.0",
